--- a/Kimox/public/assets/scss/_slider.scss
+++ b/Kimox/public/assets/scss/_slider.scss
@@ -59,7 +59,7 @@
         content: '';
         width: 24px;
         height: 6px;
-        background-color: rgb(255, 64, 64);
+        background-color: #9400d3;
         top: 5px;
         left: 0px;
     }
