--- a/Kimox/public/assets/scss/_variables.scss
+++ b/Kimox/public/assets/scss/_variables.scss
@@ -4,7 +4,7 @@ $icon-font: "Font Awesome 5 Pro";
 $body-fz: 14px;
 $body-color: #777a7e;
 $heading-color: #242629;
-$theme-color: #ff4040;
+$theme-color: #9400d3;
 $white-color: #fff;
 $grey-color: #f2f3f5;
 $border-color: #e9ebed; 
