--- a/estig/public/assets/scss/_contact.scss
+++ b/estig/public/assets/scss/_contact.scss
@@ -75,7 +75,7 @@
 
 .dropdown{
     width: 100%;
-    padding: 2%;
+    padding: 25px;
     color: $body-color;
     border: none;
     background: $grey-color;
