--- a/estig/public/assets/scss/_blog.scss
+++ b/estig/public/assets/scss/_blog.scss
@@ -25,6 +25,14 @@
         line-height: 36px;
     }
 }
+.kblog-text-docs{
+    background: transparent;
+	box-shadow: none;
+	padding: 30px 0px 30px 0px;
+    border-bottom: 1px solid $border-color;
+    text-align: center;
+}
+
 .kblog-text {
     background: $white-color;
     padding: 30px 35px 30px 35px;
