--- a/estig/public/assets/scss/_trust.scss
+++ b/estig/public/assets/scss/_trust.scss
@@ -50,9 +50,9 @@
     -moz-transition: all 8s linear 0s;
     -o-transition: all 8s linear 0s;
     transition: all 8s linear 0s;
-    -webkit-filter: grayscale(100%);
+    /*-webkit-filter: grayscale(100%);
     -ms-filter: grayscale(100%);
-    -moz-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);*/
 }
 .trust-bg::before {
 	position: absolute;
